# reusable-openai-fine-tune

./: .gitignore  README.md  pyproject.toml
datasets/: example-sarcastic-factbot.jsonl
specs/: fine-tuning-integrations.md
src/openai_fine_tune/: main.py
src/scripts/: example.py
